# triathlon-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  ML_Roadmap_Triathlon_Bot_RU.md  README.md  alembic.ini  cli.py  config.py  copy-token-garmin.sh  docker-compose.yml  mcp-audit-for-developer.md  pyproject.toml  sentry_config.py
.paperclip/: .paperclip.yaml  COMPANY.md  LICENSE  README.md
ai/: claude_agent.py  gemini_agent.py  prompts.py  tool_definitions.py
api/: auth.py  dashboard_routes.py  deps.py  dto.py  routes.py  server.py  telegram_webhook.py
bot/: agent.py  cli.py  decorator.py  donate_nudge.py  formatter.py  handlers.py  i18n.py  main.py  markdown.py  prompts.py  race_plan_telegram.py  raceplan_render.py  scheduler.py  tool_filter.py  tools.py  utils.py
data/: avatar_storage.py  card_renderer.py  crypto.py  database.py  dto.py  endurance_score.py  endurance_score_service.py  garmin_client.py  github.py  hrv_activity.py  intervals_client.py  marathon_shape.py  metrics.py  models.py  openapi-spec.json  personal_patterns.py  race_plan_compliance_service.py  race_plan_service.py  ramp_tests.py  redis_client.py  sport_map.py  taper_service.py  training_strain.py  utils.py  weekly_preview.py  workout_adapter.py
docs/: ACTIVITIES_PAGE.md  ACTIVITY_DETAILS_PHASE1.md  ACTIVITY_DETAILS_PHASE2.md  ACTUAL_MAX_ZONE_TIME_SPEC.md  ADAPTIVE_TRAINING_PLAN.md  ADAPTIVE_TRAINING_PLAN_SPEC.md  AGENT_PROMPT_STEPS_10_12.md  AI_RECOMMENDATION.md  BIKE_READINESS_SPEC.md  BUSINESS_RULES.md  DATABASE_SCHEMA.md  DECOUPLING_ANALYSIS_PLAN.md  DEMO_PUBLIC_ACCESS_SPEC.md  DFA_ALPHA1_PLAN.md  DFA_REGRESSION_METHODOLOGY_SPEC.md  DURABILITY_CLASSIFIER_SPEC.md  ENDURANCE_SCORE_SPEC.md  ESS_BANISTER_PLAN.md  GEMINI_ROLE_SPEC.md  HRV_IMPLEMENTATION_PLAN.md  HRV_MODULE_SPEC.md  HUMANGO_ENRICHMENT_SPEC.md  IMPLEMENTATION_STATUS.md  INTENSITY_DISTRIBUTION_SPEC.md  INTERVALS_NATIVE_WORKOUT_FORMAT.md  INTERVALS_WEBHOOKS_RESEARCH.md  MARATHON_SHAPE_SPEC.md  MCP_INTEGRATION_PLAN.md  MCP_PHASE2.md  MCP_PHASE3.md  ML_HRV_PREDICTION_SPEC.md  ML_RACE_PROJECTION_SPEC.md  MOOD_TRACKING.md  MULTI_TENANT_SECURITY.md  MULTI_TENANT_SECURITY_SPEC.md  OAUTH_BOOTSTRAP_SYNC_SPEC.md  OPERATIONS.md  PAPERCLIP_SETUP_SPEC.md  PER_SPORT_LOAD_SPEC.md  PLANNED_LOAD_SPEC.md  (+29 more)
issues/: 31_analysis.md  31_comment.md
landing/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  prerender.ts  tailwind.config.js  tsconfig.app.json  tsconfig.node.json
mcp_server/: __main__.py  app.py  context.py  sentry.py  server.py
migrations/: env.py
mockups/: 1-clean-minimal.html  2-dark-sport.html  3-glassmorphism.html
scripts/: db_backup.sh  (+2 more)
(+531 files in other folders)
