[project]
name = "triathlon-agent"
version = "0.1.0"
description = "Personal AI agent for triathlon training analysis"
authors = [
    {name = "Khaziev Radik", email = "xazrad@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "garminconnect>=0.2.38",
    "anthropic>=0.40.0",
    "python-telegram-bot>=21.0",
    "apscheduler>=3.10.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "fitparse>=0.6.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pandas>=2.2.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "flake8-pyproject>=1.2.0",
    "pre-commit>=3.6.0",
]

[tool.poetry]
packages = [
    { include = "bot" },
    { include = "data" },
    { include = "ai" },
    { include = "api" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv", "alembic/versions"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
